--- a/Menu/menu.html
+++ b/Menu/menu.html
@@ -59,7 +59,7 @@
             </div>               
         </main>
     </div>
-    <form action="/index.html">
+    <form action="/../academico-teste2-main/index.html">
         <div class="sair">
             <input type="submit" value="">
         </div>  
