--- a/Menu/Perfil/perfil.html
+++ b/Menu/Perfil/perfil.html
@@ -44,7 +44,7 @@
             </div>
         </form>
 
-        <form action="/index.html">
+        <form action="/Menu/menu.html">
             <div class="sair">
                 <input type="submit" value="">
             </div>
