--- a/Menu/menu.html
+++ b/Menu/menu.html
@@ -59,7 +59,7 @@
             </div>               
         </main>
     </div>
-    <form action="/">
+    <form action="../index.html">
         <div class="sair">
             <input type="submit" value="">
         </div>  
